# cinja

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO
example/: CMakeLists.txt  handler.cpp  template.h  template.html
src/: ast.h  gen.cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token.cpp  token.h  tokens.cpp  tokens.h  validate.cpp  validate.h
